# soda-factory-data-collection

./: CMakeLists.txt  README.md
docs/development/: GSDML_class.puml  GSDML_sequence.puml  SDD.markdown  SRS.markdown  deployment.puml  domain.puml  main_UCD.puml  pn_sniffer.puml
docs/proces/: PvA.markdown
docs/process/: PvA.markdown  RUP-visual.dot  afstudeerverslag.markdown
docs/research/: database.markdown  embedded-controller.markdown  profinet-io-link-diagram.puml  profinet-io-link.markdown
docs/research/database/: create.sql  database-test.py
src/: .gitignore
src/GSDML_parser/: CMakeLists.txt  gsdml_parser.cpp  gsdml_parser.h
src/profinet_sniffer/: CMakeLists.txt  decode_pn_connect.cpp  decode_pn_connect.h  decode_pnio_msg.cpp  decode_pnio_msg.h  main.cpp  sniff
